scripts/nullaway/annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8.txt
../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:278: error: [NullAway] dereferenced expression v1.getHilbertIndex() is @Nullable
				return v1.getHilbertIndex().compareTo(v2.getHilbertIndex());
				                           ^
    (see http://t.uber.com/nullaway )
../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:500: error: [NullAway] enhanced-for expression tris is @Nullable
		for (Triangle t : tris) {
		                  ^
    (see http://t.uber.com/nullaway )
../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/TriangulationMap.java:50: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return map.get(v);
		^
    (see http://t.uber.com/nullaway )
../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/TriangulationLocateTest.java:64: error: [NullAway] dereferenced expression nearestNaive is @Nullable
				g.fillOval((int)(nearestNaive.x - r / 2), (int)(nearestNaive.y - r / 2), r, r);
				                             ^
    (see http://t.uber.com/nullaway )
../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vectors.java:16: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return rect;
    	^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vector.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
5 errors
